--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>hostChange</title>
     <link rel="shortcut icon" href="//cdn.guaiwola.com/favicon.png">
 </head>
+
 <body>
     <h1>世界，你好！ Hello Electron！</h1>
+    <h2>二级标题</h2>
+    <h3>三级标题</h3>
+    <h4>四级标题</h4>
+    <h5>五级标题</h5>
+    <h6>六级标题</h6>
+    <script>
+        let eventSource = new EventSource('http://127.0.0.1:2233/reload')
+        eventSource.onmessage = function (event) {
+            if (event.data === 'reload') {
+                location.reload()
+            }
+        }
+    </script>
 </body>
+
 </html>
